--- a/sass/components/_logo-our-clients.scss
+++ b/sass/components/_logo-our-clients.scss
@@ -1,21 +1,55 @@
 /* section our clients */
-.logo-container,
-.logo-container:visited {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 90px;
-  border: 1px solid var(--icon-gray);
-  border-radius: 4px;
-  fill: var(--icon-gray);
+.clients-padding {
+  padding: 60px 15px 30px;
 
-  transition: fill var(--time-duration) var(--timing-function),
-    border-color var(--time-duration) var(--timing-function);
+  @media screen and (min-width: $desktop) {
+    padding: 94px 15px 94px;
+  }
+}
 
-  &:hover,
-  &:focus {
-    fill: var(--accent-color);
-    border-color: var(--accent-color);
+@media screen and (min-width: $mobile) {
+  .clients-wrap {
+    flex-wrap: wrap;
+  }
+  .clients-li {
+    width: calc((100% - 30px) / 2);
+    margin-bottom: 30px;
+  }
+  .logo-container,
+  .logo-container:visited {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90px;
+    border: 1px solid var(--icon-gray);
+    border-radius: 4px;
+    fill: var(--icon-gray);
+
+    transition: fill var(--time-duration) var(--timing-function),
+      border-color var(--time-duration) var(--timing-function);
+
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+      border-color: var(--accent-color);
+    }
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .clients-li {
+    width: calc((100% - 2 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .logo-container,
+  .logo-container:visited {
+    // width: 170px;
+  }
+  .clients-li {
+    width: calc((100% - 5 * 30px) / 6);
+    margin-bottom: 0;
   }
 }
