--- a/CSS/main.css
+++ b/CSS/main.css
@@ -282,28 +282,57 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-/* most sections */
-.section-padding {
-  padding: 94px 15px;
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
-.flex {
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+/* most sections */
+.section-padding {
+  padding: 60px 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-padding {
+    padding: 94px 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.flex-mobile-desktop {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.wrap {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .list {
@@ -467,25 +496,51 @@ body {
 
 /* section gallery */
 .gallery {
-  padding-bottom: 64px;
+  padding-bottom: 34px;
 }
 
-.gallery .flex-gallery {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .gallery .flex-gallery {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .gallery .wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery {
+    padding-bottom: 64px;
+  }
 }
 
 .gallery-back,
 .gallery-back:visited {
-  width: 370px;
+  width: 450px;
   margin-bottom: 30px;
-  margin-right: 30px;
   cursor: pointer;
   -webkit-transition: background-color var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
   transition: background-color var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
   transition: background-color var(--time-duration) var(--timing-function), filter var(--time-duration) var(--timing-function);
   transition: background-color var(--time-duration) var(--timing-function), filter var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-back,
+  .gallery-back:visited {
+    width: 354px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery-back,
+  .gallery-back:visited {
+    width: 370px;
+  }
 }
 
 .gallery-back:hover, .gallery-back:focus,
@@ -496,9 +551,18 @@ body {
           filter: var(--drop-shadow);
 }
 
-.gallery-back:nth-child(3n),
-.gallery-back:visited:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (max-width: 1119px) {
+  .gallery-back:nth-child(2n),
+  .gallery-back:visited:nth-child(2n) {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery-back:nth-child(3n),
+  .gallery-back:visited:nth-child(3n) {
+    margin-right: 0px;
+  }
 }
 
 .gallery-back .bordering,
@@ -558,8 +622,34 @@ body {
   margin: 0px 0px 10px 0px;
 }
 
-.flex-advantages {
-  width: 270px;
+.advantages-padding {
+  padding: 60px 15px 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-padding {
+    padding: 94px 15px 64px;
+  }
+}
+
+.advantages-padding .flex-advantages {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .flex-advantages {
+    width: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .flex-advantages {
+    width: 270px;
+  }
 }
 
 .advantages-div {
@@ -583,6 +673,12 @@ body {
 }
 
 /* section what we do */
+@media screen and (max-width: 1119px) {
+  .section-whatwedo {
+    display: none;
+  }
+}
+
 .section-whatwedo {
   padding-bottom: 94px;
 }
@@ -855,31 +951,63 @@ body {
 }
 
 /* section our clients */
-.logo-container,
-.logo-container:visited {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 170px;
-  height: 90px;
-  border: 1px solid var(--icon-gray);
-  border-radius: 4px;
-  fill: var(--icon-gray);
-  -webkit-transition: fill var(--time-duration) var(--timing-function), border-color var(--time-duration) var(--timing-function);
-  transition: fill var(--time-duration) var(--timing-function), border-color var(--time-duration) var(--timing-function);
+.clients-padding {
+  padding: 60px 15px 30px;
 }
 
-.logo-container:hover, .logo-container:focus,
-.logo-container:visited:hover,
-.logo-container:visited:focus {
-  fill: var(--accent-color);
-  border-color: var(--accent-color);
+@media screen and (min-width: 1200px) {
+  .clients-padding {
+    padding: 94px 15px 94px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .clients-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .clients-li {
+    width: calc((100% - 30px) / 2);
+    margin-bottom: 30px;
+  }
+  .logo-container,
+  .logo-container:visited {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 90px;
+    border: 1px solid var(--icon-gray);
+    border-radius: 4px;
+    fill: var(--icon-gray);
+    -webkit-transition: fill var(--time-duration) var(--timing-function), border-color var(--time-duration) var(--timing-function);
+    transition: fill var(--time-duration) var(--timing-function), border-color var(--time-duration) var(--timing-function);
+  }
+  .logo-container:hover, .logo-container:focus,
+  .logo-container:visited:hover,
+  .logo-container:visited:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-li {
+    width: calc((100% - 2 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-li {
+    width: calc((100% - 5 * 30px) / 6);
+    margin-bottom: 0;
+  }
 }
 
 /* footer */
