--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -9,31 +9,58 @@
 }
 
 /* section gallery */
-.gallery {
-  padding-bottom: 64px;
 
-  .flex-gallery {
-    display: flex;
+.gallery {
+  padding-bottom: 34px;
+
+  @media screen and (min-width: $tablet) {
+    .flex-gallery {
+      display: flex;
+    }
+    .wrap {
+      flex-wrap: wrap;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 64px;
   }
 }
 
 .gallery-back,
 .gallery-back:visited {
-  width: 370px;
+  width: 450px;
   margin-bottom: 30px;
-  margin-right: 30px;
+
   cursor: pointer;
 
   transition: background-color var(--time-duration) var(--timing-function),
     filter var(--time-duration) var(--timing-function);
+
+  @media screen and (min-width: $tablet) {
+    width: 354px;
+    margin-right: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 370px;
+  }
 
   &:hover,
   &:focus {
     background-color: var(--clean-color);
     filter: var(--drop-shadow);
   }
+  &:nth-child(2n) {
+    @media screen and (max-width: 1119px) {
+      margin-right: 0px;
+    }
+  }
+
   &:nth-child(3n) {
-    margin-right: 0px;
+    @media screen and (min-width: $desktop) {
+      margin-right: 0px;
+    }
   }
 
   .bordering {
