--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -19,7 +19,7 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  // width: 1200px;
+  // width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 
@@ -38,12 +38,12 @@ body {
 
 /* most sections */
 .section-padding {
-  padding: 60px 15px;
+  padding: 60px;
 }
 
 @media screen and (min-width: $desktop) {
   .section-padding {
-    padding: 94px 15px;
+    padding: 94px;
   }
 }
 
