--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,5 @@
 /* Header */
+
 .header {
   padding: 25px 0px;
   border-bottom: 1px solid var(--border-header);
@@ -12,49 +13,51 @@
   border: none;
 }
 
-.nav-flex {
-  display: flex;
-  align-items: center;
-}
-// навигация
-.site-nav {
-  margin-left: 93px;
-  display: flex;
-
-  .space:not(:last-child) {
-    margin-right: 50px;
-  }
-}
-// контакты
-.contacts {
-  display: flex;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  .contacts-position {
-    margin-right: 30px;
+@media screen and (min-width: $tablet) {
+  .nav-flex {
     display: flex;
     align-items: center;
+  }
+  // навигация
+  .site-nav {
+    margin-left: 93px;
+    display: flex;
 
-    .icon-contacts {
-      margin-right: 10px;
+    .space:not(:last-child) {
+      margin-right: 50px;
     }
   }
-}
-/* link hover line */
-.link-push-line {
-  position: relative;
-  padding: 32px 0;
+  // контакты
+  .contacts {
+    display: flex;
 
-  &::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
+    &:last-child {
+      margin-right: 0;
+    }
+
+    .contacts-position {
+      margin-right: 30px;
+      display: flex;
+      align-items: center;
+
+      .icon-contacts {
+        margin-right: 10px;
+      }
+    }
+  }
+  /* link hover line */
+  .link-push-line {
+    position: relative;
+    padding: 32px 0;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 4px;
+      background-color: var(--accent-color);
+      border-radius: 2px;
+    }
   }
 }
