--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,11 @@
 .logo {
   color: var(--main-color);
   font-family: var(--second-font);
-  font-size: 26px;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 26px;
+  }
+  font-size: 24px;
 
   &.footer-logo {
     color: var(--clean-color);
