--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -23,6 +23,8 @@
   &.footer-form-button {
     display: flex;
     box-shadow: var(--footer-shadow-button);
+    height: 50px;
+    margin: 0 auto;
 
     align-items: center;
 
