--- a/sass/layout/_studio.scss
+++ b/sass/layout/_studio.scss
@@ -91,6 +91,7 @@
 /* section our team */
 .ourteam {
   background-color: var(--light-background);
+  width: 100%;
 
   .ourteam-wrap {
     flex-wrap: wrap;
