--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,22 +5,56 @@
   padding: 60px 0px;
 
   .footer-flex {
-    display: flex;
+    .footer-p {
+      text-align: center;
+      margin-bottom: 20px;
+      margin-top: 12px;
 
-    .footer-margin {
-      margin-left: 70px;
+      @media screen and (min-width: $desktop) {
+        text-align: left;
+      }
+    }
 
-      .footer-p {
-        margin-bottom: 20px;
-        margin-top: 12px;
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    @media screen and (min-width: $desktop) {
+      display: flex;
+      flex-wrap: nowrap;
+
+      .footer-margin {
+        margin-left: 70px;
+
+        .footer-p {
+          text-align: left;
+        }
       }
     }
   }
 }
 
+.footer-address-logo {
+  text-align: center;
+
+  @media screen and (min-width: $tablet) {
+    margin-right: 165px;
+  }
+  @media screen and (min-width: $desktop) {
+    text-align: left;
+    margin: 0px;
+  }
+}
+
 .address {
   width: 231px;
-  margin-top: 20px;
+  margin: 20px auto 60px auto;
+  @media screen and (min-width: $desktop) {
+    margin: 20px 0px 0px auto;
+  }
 
   .link,
   .link:visited {
@@ -28,6 +62,11 @@
     display: inline-block;
     margin-top: 9px;
   }
+}
+.footer-icon-ul {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
 }
 
 .footer-space-icon {
@@ -39,18 +78,32 @@
 }
 /* Footer form */
 .footer-form-wrapper {
-  margin-left: 93px;
-
+  @media screen and (min-width: $desktop) {
+    margin-left: 93px;
+  }
   .footer-form {
-    display: flex;
+    @media screen and (min-width: $tablet) {
+      text-align: center;
+    }
+    @media screen and (min-width: $desktop) {
+      display: flex;
+    }
   }
 
   .footer-input {
     border: 1px solid var(--footer-border-input);
     border-radius: 4px;
+    width: 100%;
     height: 50px;
-    width: 358px;
-    margin-right: 12px;
+    margin-bottom: 20px;
+    @media screen and (min-width: $tablet) {
+      width: 450px;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 358px;
+      margin-right: 12px;
+    }
+
     outline: none;
     background-color: transparent;
     padding: 15px 16px;
