--- a/sass/layout/_studio.scss
+++ b/sass/layout/_studio.scss
@@ -74,8 +74,9 @@
     display: none;
   }
 }
+
 .section-whatwedo {
-  padding-bottom: 94px;
+  padding: 0px 15px 94px 15px;
 
   .whatwedo-list {
     position: relative;
