--- a/CSS/main.css
+++ b/CSS/main.css
@@ -282,8 +282,6 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 @media screen and (min-width: 480px) {
@@ -306,12 +304,12 @@ body {
 
 /* most sections */
 .section-padding {
-  padding: 60px;
+  padding: 60px 15px;
 }
 
 @media screen and (min-width: 1200px) {
   .section-padding {
-    padding: 94px;
+    padding: 94px 15px;
   }
 }
 
@@ -541,6 +539,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .gallery .wrap {
     -ms-flex-wrap: wrap;
@@ -556,7 +557,7 @@ body {
 
 .gallery-back,
 .gallery-back:visited {
-  width: 450px;
+  width: 100%;
   margin-bottom: 30px;
   cursor: pointer;
   -webkit-transition: background-color var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
@@ -568,15 +569,14 @@ body {
 @media screen and (min-width: 768px) {
   .gallery-back,
   .gallery-back:visited {
-    width: 354px;
-    margin-right: 30px;
+    width: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .gallery-back,
   .gallery-back:visited {
-    width: 370px;
+    width: calc((100% - 2 * 30px) / 3);
   }
 }
 
@@ -586,20 +586,6 @@ body {
   background-color: var(--clean-color);
   -webkit-filter: var(--drop-shadow);
           filter: var(--drop-shadow);
-}
-
-@media screen and (max-width: 1119px) {
-  .gallery-back:nth-child(2n),
-  .gallery-back:visited:nth-child(2n) {
-    margin-right: 0px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .gallery-back:nth-child(3n),
-  .gallery-back:visited:nth-child(3n) {
-    margin-right: 0px;
-  }
 }
 
 .gallery-back .bordering,
@@ -729,7 +715,7 @@ body {
 }
 
 .section-whatwedo {
-  padding-bottom: 94px;
+  padding: 0px 15px 94px 15px;
 }
 
 .section-whatwedo .whatwedo-list {
@@ -964,20 +950,57 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .header-index {
   border: none;
 }
 
-@media screen and (min-width: 768px) {
+.nav-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 767px) {
   .nav-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .nav-flex .site-nav,
+  .nav-flex .contacts {
+    display: none;
+  }
+}
+
+.button-header-mobile,
+.button-header-mobile:visited {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: none;
+  fill: var(--main-color);
+  -webkit-transition: fill var(--time-duration) var(--timing-function);
+  transition: fill var(--time-duration) var(--timing-function);
+}
+
+.button-header-mobile:hover, .button-header-mobile:focus,
+.button-header-mobile:visited:hover,
+.button-header-mobile:visited:focus {
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .button-header-mobile {
+    display: none;
   }
   .site-nav {
     margin-left: 93px;
@@ -1112,6 +1135,11 @@ body {
   padding: 60px 0px;
 }
 
+.footer .footer-flex {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .footer .footer-flex .footer-p {
   text-align: center;
   margin-bottom: 20px;
@@ -1124,7 +1152,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1119px) {
   .footer .footer-flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1145,8 +1173,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
   }
   .footer .footer-flex .footer-margin {
     margin-left: 70px;
