--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -16,6 +16,7 @@
   @media screen and (min-width: $tablet) {
     .flex-gallery {
       display: flex;
+      justify-content: space-between;
     }
     .wrap {
       flex-wrap: wrap;
@@ -29,39 +30,39 @@
 
 .gallery-back,
 .gallery-back:visited {
-  width: 450px;
+  width: 100%;
   margin-bottom: 30px;
+
+  @media screen and (min-width: $tablet) {
+    width: calc((100% - 30px) / 2);
+    // margin-right: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: calc((100% - 2 * 30px) / 3);
+  }
 
   cursor: pointer;
 
   transition: background-color var(--time-duration) var(--timing-function),
     filter var(--time-duration) var(--timing-function);
 
-  @media screen and (min-width: $tablet) {
-    width: 354px;
-    margin-right: 30px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 370px;
-  }
-
   &:hover,
   &:focus {
     background-color: var(--clean-color);
     filter: var(--drop-shadow);
   }
-  &:nth-child(2n) {
-    @media screen and (max-width: 1119px) {
-      margin-right: 0px;
-    }
-  }
+  // &:nth-child(2n) {
+  //   @media screen and (max-width: 1119px) {
+  //     margin-right: 0px;
+  //   }
+  // }
 
-  &:nth-child(3n) {
-    @media screen and (min-width: $desktop) {
-      margin-right: 0px;
-    }
-  }
+  // &:nth-child(3n) {
+  //   @media screen and (min-width: $desktop) {
+  //     margin-right: 0px;
+  //   }
+  // }
 
   .bordering {
     border-bottom: 1px solid var(--border-gallery);
