--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,13 +2,31 @@
 .body {
   position: relative;
 
-  // @media screen and (max-width: 767px) {
-  //   .div-nav-contacts {
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //   }
-  // }
+  @media screen and (max-width: 767px) {
+    .div-nav-contacts {
+      display: none;
+      background-color: var(--clean-color);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+
+      &.is-open-header-menu {
+        display: block;
+      }
+
+      .header-mobile-social {
+        display: flex;
+
+        .header-mobile-social-list {
+          padding: 0px 10px;
+          border-right: 1px solid var(--input-modal-border);
+        }
+      }
+    }
+  }
 }
 
 .header {
@@ -39,17 +57,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .header-mobile-social {
+      display: none;
+    }
   }
 }
 
 .button-header-mobile,
 .button-header-mobile:visited {
+  margin-left: auto;
   padding: 0;
   border: none;
   background-color: transparent;
   box-shadow: none;
   outline: none;
   fill: var(--main-color);
+  z-index: 4;
 
   transition: fill var(--time-duration) var(--timing-function);
 
@@ -69,6 +93,7 @@
     display: none;
   }
 }
+
 @media screen and (min-width: $tablet) {
   .button-header-mobile {
     display: none;
