--- a/CSS/main.css
+++ b/CSS/main.css
@@ -258,6 +258,11 @@
 }
 
 /* About all document */
+.img {
+  display: block;
+  max-width: 100%;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -549,9 +554,27 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media screen and (max-width: 767px) {
+  .flex-button .button {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .flex-button {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .flex-button .button {
+    margin-bottom: 50px;
+  }
 }
 
 .space-button:not(:last-child) {
@@ -595,10 +618,27 @@ body {
   transition: background-color var(--time-duration) var(--timing-function), filter var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
 }
 
-@media screen and (min-width: 768px) {
+.gallery-back .bordering,
+.gallery-back:visited .bordering {
+  border-bottom: 1px solid var(--border-gallery);
+  border-right: 1px solid var(--border-gallery);
+  border-left: 1px solid var(--border-gallery);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .gallery-back,
   .gallery-back:visited {
     width: calc((100% - 30px) / 2);
+    margin-right: 30px;
+    border: 1px solid var(--border-gallery);
+  }
+  .gallery-back:nth-child(2n),
+  .gallery-back:visited:nth-child(2n) {
+    margin-right: 0;
+  }
+  .gallery-back .bordering,
+  .gallery-back:visited .bordering {
+    border: none;
   }
 }
 
@@ -615,13 +655,6 @@ body {
   background-color: var(--clean-color);
   -webkit-filter: var(--drop-shadow);
           filter: var(--drop-shadow);
-}
-
-.gallery-back .bordering,
-.gallery-back:visited .bordering {
-  border-bottom: 1px solid var(--border-gallery);
-  border-right: 1px solid var(--border-gallery);
-  border-left: 1px solid var(--border-gallery);
 }
 
 .gallery-back .img-gallery,
@@ -654,13 +687,13 @@ body {
 
 /* section banner */
 .tagline-position {
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
 }
 
 @media screen and (min-width: 1200px) {
   .tagline-position {
-    width: 696px;
+    max-width: 696px;
   }
 }
 
@@ -737,7 +770,7 @@ body {
 }
 
 /* section what we do */
-@media screen and (max-width: 1119px) {
+@media screen and (max-width: 1199px) {
   .section-whatwedo {
     display: none;
   }
@@ -896,7 +929,6 @@ body {
   line-height: 1.62;
   letter-spacing: 0.03em;
   padding: 6px 22px;
-  margin-bottom: 50px;
   -webkit-transition: color var(--time-duration) var(--timing-function), background-color var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
   transition: color var(--time-duration) var(--timing-function), background-color var(--time-duration) var(--timing-function), -webkit-filter var(--time-duration) var(--timing-function);
   transition: color var(--time-duration) var(--timing-function), background-color var(--time-duration) var(--timing-function), filter var(--time-duration) var(--timing-function);
@@ -978,20 +1010,46 @@ body {
   .body .div-nav-contacts {
     display: none;
     background-color: var(--clean-color);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 3;
+    padding: 48px 83px 48px 40px;
+  }
+  .body .div-nav-contacts .mobile-end-window {
+    position: fixed;
+    bottom: 40px;
+    left: 40px;
   }
   .body .div-nav-contacts.is-open-header-menu {
     display: block;
+  }
+  .body .div-nav-contacts .space {
+    margin-bottom: 32px;
+  }
+  .body .div-nav-contacts .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .body .div-nav-contacts .contacts .contacts-li {
+    margin-bottom: 32px;
+  }
+  .body .div-nav-contacts .contacts .contacts-li .icon-contacts {
+    display: none;
   }
   .body .div-nav-contacts .header-mobile-social {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-top: 32px;
+    margin-left: -10px;
   }
   .body .div-nav-contacts .header-mobile-social .header-mobile-social-list {
     padding: 0px 10px;
@@ -1015,6 +1073,12 @@ body {
   padding-left: 15px;
 }
 
+@media screen and (max-width: 767px) {
+  .header .container.header-center {
+    width: 100%;
+  }
+}
+
 .header-index {
   border: none;
 }
@@ -1029,6 +1093,27 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    padding: 21px 0;
+  }
+  .header .contacts {
+    width: 138px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .header .contacts .contacts-li {
+    margin-bottom: 10px;
+    margin-right: 0px;
+  }
+  .header .contacts .contacts-li:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1090,12 +1175,21 @@ body {
     display: none;
   }
   .site-nav {
-    margin-left: 93px;
+    margin-left: 88px;
     margin-right: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .site-nav {
+    margin-left: 93px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .site-nav .space:not(:last-child) {
     margin-right: 50px;
   }
@@ -1104,12 +1198,18 @@ body {
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
   .contacts .contacts-li {
     margin-right: 30px;
   }
   .contacts .contacts-li:last-child {
     margin-right: 0;
   }
+}
+
+@media screen and (min-width: 768px) {
   .contacts .contacts-position {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1242,7 +1342,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1119px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer .footer-flex {
     display: -webkit-box;
     display: -ms-flexbox;
