--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,7 +1,21 @@
 // buttons
 .flex-button {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+
+  @media screen and (max-width: 767px) {
+    .button {
+      margin-bottom: 15px;
+    }
+  }
+
+  @media screen and (min-width: $tablet) {
+    justify-content: center;
+    flex-wrap: nowrap;
+    .button {
+      margin-bottom: 50px;
+    }
+  }
 }
 
 .space-button:not(:last-child) {
@@ -33,9 +47,24 @@
   width: 100%;
   margin-bottom: 30px;
 
-  @media screen and (min-width: $tablet) {
+  .bordering {
+    border-bottom: 1px solid var(--border-gallery);
+    border-right: 1px solid var(--border-gallery);
+    border-left: 1px solid var(--border-gallery);
+  }
+
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     width: calc((100% - 30px) / 2);
-    // margin-right: 30px;
+    margin-right: 30px;
+    border: 1px solid var(--border-gallery);
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    .bordering {
+      border: none;
+    }
   }
 
   @media screen and (min-width: $desktop) {
@@ -53,7 +82,7 @@
     filter: var(--drop-shadow);
   }
   // &:nth-child(2n) {
-  //   @media screen and (max-width: 1119px) {
+  //   @media screen and (max-width: 1199px) {
   //     margin-right: 0px;
   //   }
   // }
@@ -64,11 +93,6 @@
   //   }
   // }
 
-  .bordering {
-    border-bottom: 1px solid var(--border-gallery);
-    border-right: 1px solid var(--border-gallery);
-    border-left: 1px solid var(--border-gallery);
-  }
   .img-gallery {
     display: block;
   }
