--- a/sass/layout/_studio.scss
+++ b/sass/layout/_studio.scss
@@ -1,8 +1,8 @@
 /* section banner */
 .tagline-position {
-  width: 360px;
+  max-width: 360px;
   @media screen and (min-width: $desktop) {
-    width: 696px;
+    max-width: 696px;
   }
   margin: 0 auto;
 }
@@ -69,7 +69,7 @@
 }
 
 /* section what we do */
-@media screen and (max-width: 1119px) {
+@media screen and (max-width: 1199px) {
   .section-whatwedo {
     display: none;
   }
