--- a/sass/layout/_modal-window.scss
+++ b/sass/layout/_modal-window.scss
@@ -9,6 +9,8 @@
 
   background-color: var(--modal-back);
 
+  z-index: 5;
+
   opacity: 1;
   transition: opacity var(--time-duration) var(--timing-function);
 
@@ -31,8 +33,21 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--time-duration) var(--timing-function);
 
-  width: 528px;
-  height: 581px;
+  z-index: 6;
+
+  @media screen and (max-width: 479px) {
+    max-width: 450px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    width: 450px;
+    height: 609px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 528px;
+    height: 581px;
+  }
 
   background-color: var(--clean-color);
   border-radius: 4px;
@@ -137,6 +152,11 @@
 
 /* modal agree form */
 .agree-form {
+  @media screen and (max-width: 479px) {
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,9 +166,19 @@
   }
 
   .checkbox-text {
-    font-size: 14px;
+    @media screen and (max-width: 479px) {
+      font-size: 10px;
+    }
+    @media screen and (min-width: 480px) {
+      font-size: 12px;
+    }
+
     line-height: 1.71;
     letter-spacing: 0.03em;
+
+    @media screen and (min-height: $desktop) {
+      font-size: 14px;
+    }
   }
 
   .agree {
