--- a/sass/layout/_studio.scss
+++ b/sass/layout/_studio.scss
@@ -15,8 +15,17 @@
   }
 
   background-color: var(--dark-background);
-  background-image: var(--banner-gradient), url(../images/bg-our-office.jpg);
+  background-image: var(--banner-gradient),
+    url('../images/bg-our-office-1x.jpg');
   background-size: cover;
+  background-position: center;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: var(--banner-gradient),
+      url('../images/bg-our-office-2x.jpg');
+  }
 
   .banner-center {
     text-align: center;
