--- a/sass/base/_text.scss
+++ b/sass/base/_text.scss
@@ -38,6 +38,10 @@
   line-height: 1.12;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+
+  @media screen and (max-width: 479px) {
+    font-size: 10px;
+  }
 }
 .contacts .link,
 .contacts .link:visited {
@@ -45,7 +49,17 @@
   font-weight: 500;
   letter-spacing: 0.02em;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 479px) {
+    font-size: 18px;
+    line-height: 1.17;
+    &.blue {
+      font-size: 24px;
+      line-height: 1.18;
+      color: var(--accent-color);
+    }
+  }
+
+  @media screen and (min-width: $mobile) and (max-width: 767px) {
     font-size: 24px;
     line-height: 1.17;
 
